# overshoot-governor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_notebook.py  overshoot-governor-capstone.ipynb  pyproject.toml  requirements.txt
.github/workflows/: security.yml
demo/: run_adk_demo.py
docs/: kaggle_writeup.md  video_script.md
security/: threat_model.md
sim/: simulation.py
src/governor/: __init__.py  adk_plugin.py  appeals.py  estimator.py  judge.py  ledger.py  mcp_server.py  quota.py
tests/: test_adk_plugin.py  test_governor.py  test_mcp_server.py
tools/: governor_manager.py  make_diagram.py
